# ringbuffer-sc4

./: .gitignore  CMakeLists.txt  NOTES  NOTICE.txt  README.md
cmake/: Findpsrdada.cmake
debian/: README.Debian  changelog  control  copyright  watch
src/: channel_remapping_sc4.c  config.h.in  fake.c  fill_ringbuffer.c  send.c
test/: header
